--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@nelts/process": "^1.1.20",
-    "@nelts/utils": "^1.0.18"
+    "@nelts/utils": "^1.0.18",
+    "globby": "^10.0.1",
+    "injection": "^1.6.1"
   }
 }
